--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
   "scripts": {
     "start": "npm run build",
     "build": "webpack -d",
-    "bw":"npm run build-watch",
-    "serve":"webpack-dev-server --content-base src --inline --hot",
-    "build-watch":"webpack -d --watch",
-    "prod":"webpack -p"
-
-
+    "bw": "npm run build-watch",
+    "serve": "webpack-dev-server --content-base src --inline --hot",
+    "build-watch": "webpack -d --watch",
+    "prod": "webpack -p"
   },
   "keywords": [
     "react"
@@ -20,6 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.26.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -28,6 +28,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
+    "hammerjs": "^2.0.8",
+    "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   }
